[gd_scene load_steps=58 format=2]

[ext_resource path="res://Actors/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Actors/TheUniqueBullet/Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Spritesheets/industrial.v2.png" type="Texture" id=3]
[ext_resource path="res://Actors/Player/PlayerSprite.gd" type="Script" id=4]
[ext_resource path="res://Actors/Player/Particles/StepParticles.tscn" type="PackedScene" id=5]
[ext_resource path="res://Actors/Player/Particles/ChargedStepParticles.tscn" type="PackedScene" id=6]
[ext_resource path="res://Actors/Player/Particles/PlayerSparks.tscn" type="PackedScene" id=7]
[ext_resource path="res://Actors/Player/Particles/ChargedPlayerSparks.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/SFX/Steps/step0.ogg" type="AudioStream" id=9]
[ext_resource path="res://Assets/SFX/Steps/step1.ogg" type="AudioStream" id=10]
[ext_resource path="res://Assets/SFX/Steps/step2.ogg" type="AudioStream" id=11]
[ext_resource path="res://Assets/SFX/Steps/step3.ogg" type="AudioStream" id=12]
[ext_resource path="res://Assets/SFX/Steps/step4.ogg" type="AudioStream" id=13]
[ext_resource path="res://Assets/SFX/Steps/step5.ogg" type="AudioStream" id=14]
[ext_resource path="res://Assets/SFX/Steps/step6.ogg" type="AudioStream" id=15]
[ext_resource path="res://Assets/SFX/Steps/step7.ogg" type="AudioStream" id=16]
[ext_resource path="res://Assets/SFX/Steps/step8.ogg" type="AudioStream" id=17]
[ext_resource path="res://Assets/SFX/Steps/step9.ogg" type="AudioStream" id=18]
[ext_resource path="res://Assets/SFX/Landing/landing0.ogg" type="AudioStream" id=19]
[ext_resource path="res://Assets/SFX/Landing/landing1.ogg" type="AudioStream" id=20]
[ext_resource path="res://Assets/SFX/Landing/landing2.ogg" type="AudioStream" id=21]
[ext_resource path="res://Assets/Particles/particle1.png" type="Texture" id=22]
[ext_resource path="res://Actors/Player/OneShotShootParticles.gd" type="Script" id=23]
[ext_resource path="res://Actors/Player/Particles/ShootParticles.tscn" type="PackedScene" id=24]
[ext_resource path="res://Assets/Particles/particle2.png" type="Texture" id=25]
[ext_resource path="res://Actors/Player/OneShotBoostParticles.gd" type="Script" id=26]
[ext_resource path="res://Actors/Player/Particles/BoostParticles.tscn" type="PackedScene" id=27]
[ext_resource path="res://Actors/Player/Particles/DeathParticles1.tscn" type="PackedScene" id=28]
[ext_resource path="res://Actors/Player/Particles/DeathParticles2.tscn" type="PackedScene" id=29]
[ext_resource path="res://Actors/Player/Particles/RespawnParticles.tscn" type="PackedScene" id=30]
[ext_resource path="res://Actors/Player/ShaderEffects.gd" type="Script" id=31]
[ext_resource path="res://Assets/ShaderEffects/Ripples/Ripples.tscn" type="PackedScene" id=32]
[ext_resource path="res://Assets/SFX/270320__littlerobotsoundfactory__jump-00.wav" type="AudioStream" id=33]
[ext_resource path="res://Assets/SFX/270307__littlerobotsoundfactory__explosion-01.wav" type="AudioStream" id=34]
[ext_resource path="res://Assets/SFX/270335__littlerobotsoundfactory__shoot-03.wav" type="AudioStream" id=35]
[ext_resource path="res://Assets/SFX/270340__littlerobotsoundfactory__pickup-01.wav" type="AudioStream" id=36]
[ext_resource path="res://Assets/SFX/270341__littlerobotsoundfactory__pickup-04.wav" type="AudioStream" id=37]
[ext_resource path="res://Assets/SFX/270308__littlerobotsoundfactory__explosion-00.wav" type="AudioStream" id=38]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode unshaded;

uniform bool activate;
uniform bool erase;
uniform bool fuel;
uniform vec4 color_1: hint_color;
uniform vec4 color_2: hint_color;
uniform vec4 color_3: hint_color;
uniform vec4 color_4: hint_color;

void fragment ()
{
	COLOR = texture(TEXTURE , UV);
	if (activate == true)
		COLOR.rgb = color_1.rgb;
	if (erase == true)
		COLOR.a = 0.0;
	if (fuel == true && length(COLOR.rgb - color_1.rgb) <= 0.1)
		COLOR.rgb = color_2.rgb;
	if (fuel == true && length(COLOR.rgb - color_3.rgb) <= 0.1)
		COLOR.rgb = color_4.rgb;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/activate = false
shader_param/erase = false
shader_param/fuel = false
shader_param/color_1 = Color( 0.956863, 0.956863, 0.894118, 1 )
shader_param/color_2 = Color( 1, 0.309804, 0.470588, 1 )
shader_param/color_3 = Color( 0.490196, 0.490196, 0.490196, 1 )
shader_param/color_4 = Color( 0, 0, 0, 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4.5, 6 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4.1541, 0.483639 )

[sub_resource type="Animation" id=6]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
length = 1.35
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.65, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 2 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("PlayerSprite")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "standing"
}, {
"args": [  ],
"method": "standing"
}, {
"args": [  ],
"method": "standing"
}, {
"args": [  ],
"method": "standing"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "Landing"
length = 0.16
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("PlayerSprite")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "land"
} ]
}

[sub_resource type="Animation" id=9]
length = 0.12
step = 0.06
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 16, 17 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("PlayerSprite")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot_particles"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "TeleportInLeft"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, -1 ), Vector2( 1, -1 ), Vector2( 6, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 6, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "TeleportOutLeft"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -12 ), Vector2( 0.5, -4 ), Vector2( 1, -1 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 12 ), Vector2( 0.5, 4 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.64
loop = true
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("PlayerSprite")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4, 0.44, 0.48, 0.52, 0.56, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "steps"
}, {
"args": [  ],
"method": "steps"
}, {
"args": [  ],
"method": "steps"
}, {
"args": [  ],
"method": "steps"
}, {
"args": [  ],
"method": "steps"
}, {
"args": [  ],
"method": "steps"
}, {
"args": [  ],
"method": "steps"
}, {
"args": [  ],
"method": "steps"
}, {
"args": [  ],
"method": "steps"
}, {
"args": [  ],
"method": "steps"
}, {
"args": [  ],
"method": "steps"
}, {
"args": [  ],
"method": "steps"
}, {
"args": [  ],
"method": "steps"
}, {
"args": [  ],
"method": "steps"
}, {
"args": [  ],
"method": "steps"
}, {
"args": [  ],
"method": "steps"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("PlayerSprite")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.16, 0.48 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "step_sound"
}, {
"args": [  ],
"method": "step_sound"
} ]
}

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 3, 3 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 3, 3 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 5.5, 7 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 1, 1 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 1, 1 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 0
collision_mask = 3
script = ExtResource( 1 )
bullet = ExtResource( 2 )
shoot_offset = 7.0
label_time = 2.0
factor = 1.0
has_bullet = true
acceleration = 600.0
speed = 100.0
friction = 900.0
air_friction = 150.0
boost_distance = 72.0
boost_time = 0.4
coyote_time = 0.1
bunny_time = 0.1
jump_height = 40.0
gravity = 500.0

[node name="PlayerSprite" type="Sprite" parent="."]
editor/display_folded = true
material = SubResource( 2 )
texture = ExtResource( 3 )
vframes = 4
hframes = 8
frame = 1
region_enabled = true
region_rect = Rect2( 0, 256, 128, 64 )
script = ExtResource( 4 )
uncharged_step_particles = ExtResource( 5 )
charged_step_particles = ExtResource( 6 )
uncharged_player_sparks = ExtResource( 7 )
charged_player_sparks = ExtResource( 8 )
step_sounds = [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ]
land_sounds = [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ]

[node name="ProjectileParticles" type="CPUParticles2D" parent="PlayerSprite"]
position = Vector2( 5, 2 )
z_index = -1
emitting = false
amount = 12
lifetime = 0.2
local_coords = false
texture = ExtResource( 22 )
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2( 0, -500 )
initial_velocity = 0.0
scale_amount = 0.2
scale_amount_random = 0.2
scale_amount_curve = SubResource( 3 )

[node name="Timer" type="Timer" parent="PlayerSprite"]
wait_time = 0.05
one_shot = true

[node name="Timer2" type="Timer" parent="PlayerSprite"]
wait_time = 0.5
one_shot = true

[node name="PlayerSparksTimer" type="Timer" parent="PlayerSprite"]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.5, 2 )
shape = SubResource( 4 )

[node name="PlatformSentinel" type="Area2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( -0.5, 7.5 )
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformSentinel"]
position = Vector2( 0, 0.5 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Airborne = SubResource( 6 )
anims/Idle = SubResource( 7 )
anims/Landing = SubResource( 8 )
anims/Shooting = SubResource( 9 )
anims/TeleportInLeft = SubResource( 10 )
anims/TeleportInRight = SubResource( 11 )
anims/TeleportOutLeft = SubResource( 12 )
anims/TeleportOutRight = SubResource( 13 )
anims/Walking = SubResource( 14 )

[node name="FuelParticles" type="Node2D" parent="."]
editor/display_folded = true

[node name="Particles1" type="CPUParticles2D" parent="FuelParticles"]
position = Vector2( 0, 8 )
rotation = -0.174533
emitting = false
amount = 20
lifetime = 0.5
local_coords = false
spread = 10.0
gravity = Vector2( 0, 0 )
initial_velocity = 75.0
initial_velocity_random = 1.0
damping = 50.0
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="Particles2" type="CPUParticles2D" parent="FuelParticles"]
position = Vector2( 0, 8 )
rotation = -2.96706
emitting = false
amount = 20
lifetime = 0.5
local_coords = false
spread = 10.0
gravity = Vector2( 0, 0 )
initial_velocity = 75.0
initial_velocity_random = 1.0
damping = 50.0
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="Particles3" type="CPUParticles2D" parent="FuelParticles"]
position = Vector2( 0, 8 )
rotation = -1.5708
emitting = false
amount = 20
lifetime = 0.5
local_coords = false
spread = 80.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
damping = 50.0
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="Particles4" type="CPUParticles2D" parent="FuelParticles"]
position = Vector2( 0, 8 )
rotation = -1.5708
emitting = false
amount = 1
lifetime = 1.5
local_coords = false
gravity = Vector2( 0, 40 )
initial_velocity = 60.0
initial_velocity_random = 0.5
scale_amount = 2.0
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="ShootParticles" type="Node2D" parent="."]
editor/display_folded = true

[node name="OneShotShootParticles" type="Node2D" parent="ShootParticles"]
script = ExtResource( 23 )
particles = [ ExtResource( 24 ) ]

[node name="BoostParticles" type="Node2D" parent="."]
editor/display_folded = true

[node name="Particles1" type="CPUParticles2D" parent="BoostParticles"]
z_index = -2
emitting = false
amount = 9
lifetime = 0.5
local_coords = false
texture = ExtResource( 25 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 0.0

[node name="OneShotBoostParticles" type="Node2D" parent="BoostParticles"]
script = ExtResource( 26 )
particles = [ ExtResource( 27 ) ]

[node name="DeathParticles" type="Node2D" parent="."]
editor/display_folded = true

[node name="OneShotDeathParticles" type="Node2D" parent="DeathParticles"]
script = ExtResource( 26 )
particles = [ ExtResource( 28 ), ExtResource( 29 ) ]

[node name="RespawnParticles" type="Node2D" parent="."]
editor/display_folded = true

[node name="OneShotParticles" type="Node2D" parent="RespawnParticles"]
script = ExtResource( 26 )
particles = [ ExtResource( 30 ) ]

[node name="ShaderEffects" type="Node2D" parent="."]
script = ExtResource( 31 )
ripple_effect = ExtResource( 32 )

[node name="BunnyTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="BoostTimer" type="Timer" parent="."]
one_shot = true

[node name="DropTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="LeftAreaChecker" type="Area2D" parent="."]
editor/display_folded = true
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftAreaChecker"]
shape = SubResource( 15 )

[node name="RightAreaChecker" type="Area2D" parent="."]
editor/display_folded = true
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightAreaChecker"]
shape = SubResource( 16 )

[node name="SpikesSentinel" type="Area2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( -0.5, 2 )
collision_layer = 12
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikesSentinel"]
shape = SubResource( 17 )

[node name="SFX" type="Node" parent="."]
editor/display_folded = true

[node name="Jump" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 33 )
volume_db = -8.0
bus = "SFX"

[node name="SuperJump" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 34 )
bus = "SFX"

[node name="Shoot" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 35 )
bus = "SFX"

[node name="BulletPickup" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 36 )
bus = "SFX"

[node name="FuelPickup" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 37 )
bus = "SFX"

[node name="Step" type="AudioStreamPlayer" parent="SFX"]
volume_db = -9.0
pitch_scale = 2.0
bus = "REVERB"

[node name="Land" type="AudioStreamPlayer" parent="SFX"]
volume_db = -6.0
pitch_scale = 1.8
bus = "REVERB"

[node name="Death" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 38 )
bus = "SFX"

[node name="RightLedgeDetector" type="Area2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 16, 8 )
collision_layer = 0
collision_mask = 19
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightLedgeDetector"]
shape = SubResource( 18 )

[node name="LeftLedgeDetector" type="Area2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( -16, 8 )
collision_layer = 0
collision_mask = 19
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftLedgeDetector"]
shape = SubResource( 19 )
[connection signal="timeout" from="PlayerSprite/Timer2" to="PlayerSprite" method="_on_Timer2_timeout"]
[connection signal="timeout" from="PlayerSprite/PlayerSparksTimer" to="PlayerSprite" method="_on_PlayerSparksTimer_timeout"]
[connection signal="timeout" from="BoostTimer" to="." method="_on_BoostTimer_timeout"]
[connection signal="timeout" from="DropTimer" to="." method="_on_DropTimer_timeout"]
[connection signal="body_entered" from="SpikesSentinel" to="." method="_on_SpikesSentinel_body_entered"]
